# llm-forge

./: PHASE_2B_COMPLIANCE_REPORT.md  README.md  STREAMING-TEST-SUMMARY.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
forge-benchmarks/: Cargo.toml
forge-benchmarks/benchmarks/output/: summary.md
forge-benchmarks/src/: lib.rs
forge-benchmarks/src/adapters/: forge_adapter.rs  mod.rs
forge-benchmarks/src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
forge-benchmarks/src/infra/: cache.rs  config.rs  metrics.rs  mod.rs
src/: index.ts
src/service/: execution-context.ts  server.ts
tests/reports/: STREAMING-TESTS-FINAL-REPORT.md  streaming-qa-report.md
tests/service/: execution-context.test.ts
